testdata/language-features/basic-values/case04.reject.out
type error: can not unify
  ()
with
  Char
in case04.reject.lc:2:8:
  1 -> '1'
       ^^^
------------ trace
!type error: can not unify
  ()
with
  Char
in case04.reject.lc:2:8:
  1 -> '1'
       ^^^
------------ tooltips
case04.reject.lc 2:8-2:11
    Char
case04.reject.lc 3:8-3:10
    ()